# codexa

./: .gitignore  README.md  USAGE.md  go.mod  pyproject.toml
cmd/codex-hybrid-autopilot/: main.go
examples/: objective.md
internal/autopilot/: app.go  app_test.go  codex.go  config.go  git.go  input_unix.go  input_unix_test.go  interactive_session.go  invocation.go  invocation_test.go  output_capture.go  output_capture_test.go  prompt.go  prompt_test.go  protocol.go  protocol_test.go  runtime.go  runtime_test.go  runtime_unix.go  session.go  session_test.go  state.go  util.go
skills/codex-session-autopilot/: SKILL.md
skills/codex-session-autopilot/agents/: openai.yaml
skills/codex-session-autopilot/references/: protocol.md
src/codex_hybrid_autopilot/: __init__.py  main.py  prompting.py  protocol.py  runner.py  state.py
tests/: test_prompting.py  test_protocol.py
