[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-hybrid-autopilot"
version = "0.1.0"
description = "Visible hybrid autopilot wrapper around the official Codex CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-hybrid-autopilot = "codex_hybrid_autopilot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

